2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 507953 – gtk_tree_view_set_tooltip_column() shows markups

	* gtk/gtktreeview.c (gtk_tree_view_set_tooltip_column): Mention
	that the tooltip is set as markup. Proposed by Czirkos Zoltan.

2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 510225 – gtk_widget_get_composite_name retval should be freed

	* gtk/gtkwidget.c (gtk_widget_get_composite_name): Clarify the
	docs. Pointed out by Wolfgang Oertl

2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 531129 – gtk_style_copy() does not include a return value or 
	description

	* gtk/gtkstyle.c: Document gtk_style_copy.

2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 541540 – Dead link to pkg-config site in GTK+ online FAQ
	Bug 513580 – Broken link in GTK+ FAQ

	* docs/faq/gtk-faq.sgml: Remove or update some outdated links.

2008-07-07  Christian Dywan  <christian@imendio.com>

	* gtk/gtkcontainer.c (gtk_container_add_with_properties): Remove
	erroneously added g_return_if_fail (bug #541811).

2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 343663 – source-buffer highlighting highlights "char" in
	gtk_text_iter_forward_char

	* demos/gtk-demo/*.c: Fix up the handrolled hilighting a bit.

2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 327582 – Incomplete docs for GtkSettings::gtk-icon-sizes
	
	* gtk/gtksettings.c: Improve the documentation of the
	gtk-icon-sizes setting. Proposed by Tommi Komulainen.

2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 539248 – gtk_calender_query_tooltip calls ->detail_func with
	invalid dates

	* gtk/gtkcalendar.c (gtk_calendar_query_tooltip):
	Check that the cursor is over a valid date before retrieving
	its details.  Patch by Chris Wilson

2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 493008 – gdk_screen_get_window_stack is not 64-bit-compatible

	* gdk/x11/gdkscreen-x11.c (gdk_screen_get_window_stack): Fix
	64-bit brokenness. Reported by Christian Hammond.
